--- a/modes/spanish.jsonc
+++ b/modes/spanish.jsonc
@@ -99,15 +99,15 @@
     "úy": "{yanta}[double-left-curl]{}",
 
     // Falling diphthongs
-    "ia": "[double-dot-below][triple-dot-above]{}",
-    "ie": "[double-dot-below][acute]{}",
-    "io": "[double-dot-below][right-curl]{}",
-    "iu": "[double-dot-below][left-curl]{}",
+    "ia": "[triple-dot-above][double-dot-below]{}",
+    "ie": "[acute][double-dot-below]{}",
+    "io": "[right-curl][double-dot-below]{}",
+    "iu": "[left-curl][double-dot-below]{}",
 
     "iá": "[double-dot-below]{aara}[triple-dot-above]{}",
-    "ié": "[double-dot-below][double-acute]{}",
-    "ió": "[double-dot-below][double-right-curl]{}",
-    "iú": "[double-dot-below][double-left-curl]{}",
+    "ié": "[double-acute][double-dot-below]{}",
+    "ió": "[double-right-curl][double-dot-below]{}",
+    "iú": "[double-left-curl][double-dot-below]{}",
 
     // The tehtar of u-dipthongs may overlap
     // Recommend using tengwar Telcontar for this purpose
@@ -157,74 +157,74 @@
 
     // OTHER THREE-VOWEL COMBINATIONS
     // The diphthong in those cases is with the second and third vowels
-    "aia": "[triple-dot-above]{telco}[double-dot-below][triple-dot-above]{}",
-    "aie": "[triple-dot-above]{telco}[double-dot-below][acute]{}",
-    "aio": "[triple-dot-above]{telco}[double-dot-below][right-curl]{}",
-    "aiu": "[triple-dot-above]{telco}[double-dot-below][left-curl]{}",
-    "aiá": "[triple-dot-above]{telco}[double-dot-below]{aara}[triple-dot-above]{}",
-    "aié": "[triple-dot-above]{telco}[double-dot-below][double-acute]{}",
-    "aió": "[triple-dot-above]{telco}[double-dot-below][double-acute]{}",
-    "aiú": "[triple-dot-above]{telco}[double-dot-below][double-left-curl]{}",
+    "aia": "[triple-dot-above]{telco}[triple-dot-above][double-dot-below]{}",
+    "aie": "[triple-dot-above]{telco}[acute][double-dot-below]{}",
+    "aio": "[triple-dot-above]{telco}[right-curl][double-dot-below]{}",
+    "aiu": "[triple-dot-above]{telco}[left-curl][double-dot-below]{}",
+    "aiá": "[triple-dot-above]{aara}[triple-dot-above][double-dot-below]{}",
+    "aié": "[triple-dot-above]{telco}[double-acute][double-dot-below]{}",
+    "aió": "[triple-dot-above]{telco}[double-acute][double-dot-below]{}",
+    "aiú": "[triple-dot-above]{telco}[double-left-curl][double-dot-below]{}",
     "aua": "[triple-dot-above]{telco}[over-twist][triple-dot-above]{}",
     "aue": "[triple-dot-above]{telco}[over-twist][acute]{}",
     "auo": "[triple-dot-above]{telco}[over-twist][right-curl]{}",
     "aui": "[triple-dot-above]{telco}[over-twist][dot-above]{}",
-    "auá": "[triple-dot-above]{telco}[over-twist]{aara}[triple-dot-above]{}",
+    "auá": "[triple-dot-above]{aara}[over-twist][triple-dot-above]{}",
     "aué": "[triple-dot-above]{telco}[over-twist][double-acute]{}",
     "auó": "[triple-dot-above]{telco}[over-twist][double-acute]{}",
-    "auí": "[triple-dot-above]{telco}[over-twist]{aara}[dot-above]{}",
+    "auí": "[triple-dot-above]{aara}[over-twist][dot-above]{}",
 
-    "eia": "[acute]{telco}[double-dot-below][triple-dot-above]{}",
-    "eie": "[acute]{telco}[double-dot-below][acute]{}",
-    "eio": "[acute]{telco}[double-dot-below][right-curl]{}",
-    "eiu": "[acute]{telco}[double-dot-below][left-curl]{}",
-    "eiá": "[acute]{telco}[double-dot-below]{aara}[triple-dot-above]{}",
-    "eié": "[acute]{telco}[double-dot-below][double-acute]{}",
-    "eió": "[acute]{telco}[double-dot-below][double-acute]{}",
-    "eiú": "[acute]{telco}[double-dot-below][double-left-curl]{}",
+    "eia": "[acute]{telco}[triple-dot-above][double-dot-below]{}",
+    "eie": "[acute]{telco}[acute][double-dot-below]{}",
+    "eio": "[acute]{telco}[right-curl][double-dot-below]{}",
+    "eiu": "[acute]{telco}[left-curl][double-dot-below]{}",
+    "eiá": "[acute]{aara}[triple-dot-above][double-dot-below]{}",
+    "eié": "[acute]{telco}[double-acute][double-dot-below]{}",
+    "eió": "[acute]{telco}[double-acute][double-dot-below]{}",
+    "eiú": "[acute]{telco}[double-left-curl][double-dot-below]{}",
     "eua": "[acute]{telco}[over-twist][triple-dot-above]{}",
     "eue": "[acute]{telco}[over-twist][acute]{}",
     "euo": "[acute]{telco}[over-twist][right-curl]{}",
     "eui": "[acute]{telco}[over-twist][dot-above]{}",
-    "euá": "[acute]{telco}[over-twist]{aara}[triple-dot-above]{}",
+    "euá": "[acute]{aara}[over-twist][triple-dot-above]{}",
     "eué": "[acute]{telco}[over-twist][double-acute]{}",
     "euó": "[acute]{telco}[over-twist][double-acute]{}",
-    "euí": "[acute]{telco}[over-twist]{aara}[dot-above]{}",
+    "euí": "[acute]{aara}[over-twist][dot-above]{}",
 
-    "oia": "[right-curl]{telco}[double-dot-below][triple-dot-above]{}",
-    "oie": "[right-curl]{telco}[double-dot-below][acute]{}",
-    "oio": "[right-curl]{telco}[double-dot-below][right-curl]{}",
-    "oiu": "[right-curl]{telco}[double-dot-below][left-curl]{}",
-    "oiá": "[right-curl]{telco}[double-dot-below]{aara}[triple-dot-above]{}",
-    "oié": "[right-curl]{telco}[double-dot-below][double-acute]{}",
-    "oió": "[right-curl]{telco}[double-dot-below][double-acute]{}",
-    "oiú": "[right-curl]{telco}[double-dot-below][double-left-curl]{}",
+    "oia": "[right-curl]{telco}[triple-dot-above][double-dot-below]{}",
+    "oie": "[right-curl]{telco}[acute][double-dot-below]{}",
+    "oio": "[right-curl]{telco}[right-curl][double-dot-below]{}",
+    "oiu": "[right-curl]{telco}[left-curl][double-dot-below]{}",
+    "oiá": "[right-curl]{aara}[triple-dot-above][double-dot-below]{}",
+    "oié": "[right-curl]{telco}[double-acute][double-dot-below]{}",
+    "oió": "[right-curl]{telco}[double-acute][double-dot-below]{}",
+    "oiú": "[right-curl]{telco}[double-left-curl][double-dot-below]{}",
     "oua": "[right-curl]{telco}[over-twist][triple-dot-above]{}",
     "oue": "[right-curl]{telco}[over-twist][acute]{}",
     "ouo": "[right-curl]{telco}[over-twist][right-curl]{}",
     "oui": "[right-curl]{telco}[over-twist][dot-above]{}",
-    "ouá": "[right-curl]{telco}[over-twist]{aara}[triple-dot-above]{}",
+    "ouá": "[right-curl]{aara}[over-twist][triple-dot-above]{}",
     "oué": "[right-curl]{telco}[over-twist][double-acute]{}",
     "ouó": "[right-curl]{telco}[over-twist][double-acute]{}",
-    "ouí": "[right-curl]{telco}[over-twist]{aara}[dot-above]{}",
+    "ouí": "[right-curl]{aara}[over-twist][dot-above]{}",
 
     "iua": "[dot-above]{telco}[over-twist][triple-dot-above]{}",
     "iue": "[dot-above]{telco}[over-twist][acute]{}",
     "iuo": "[dot-above]{telco}[over-twist][right-curl]{}",
     "iui": "[dot-above]{telco}[over-twist][dot-above]{}",
-    "iuá": "[dot-above]{telco}[over-twist]{aara}[triple-dot-above]{}",
+    "iuá": "[dot-above]{aara}[over-twist][triple-dot-above]{}",
     "iué": "[dot-above]{telco}[over-twist][double-acute]{}",
     "iuó": "[dot-above]{telco}[over-twist][double-acute]{}",
-    "iuí": "[dot-above]{telco}[over-twist]{aara}[dot-above]{}",
+    "iuí": "[dot-above]{aara}[over-twist][dot-above]{}",
 
-    "uia": "[dot-above]{telco}[double-dot-below][triple-dot-above]{}",
-    "uie": "[dot-above]{telco}[double-dot-below][acute]{}",
-    "uio": "[dot-above]{telco}[double-dot-below][right-curl]{}",
-    "uiu": "[dot-above]{telco}[double-dot-below][left-curl]{}",
-    "uiá": "[dot-above]{telco}[double-dot-below]{aara}[triple-dot-above]{}",
-    "uié": "[dot-above]{telco}[double-dot-below][double-acute]{}",
-    "uió": "[dot-above]{telco}[double-dot-below][double-acute]{}",
-    "uiú": "[dot-above]{telco}[double-dot-below][double-left-curl]{}",
+    "uia": "[dot-above]{telco}[triple-dot-above][double-dot-below]{}",
+    "uie": "[dot-above]{telco}[acute][double-dot-below]{}",
+    "uio": "[dot-above]{telco}[right-curl][double-dot-below]{}",
+    "uiu": "[dot-above]{telco}[left-curl][double-dot-below]{}",
+    "uiá": "[dot-above]{aara}triple-dot-above][double-dot-below]{}",
+    "uié": "[dot-above]{telco}[double-acute][double-dot-below]{}",
+    "uió": "[dot-above]{telco}[double-acute][double-dot-below]{}",
+    "uiú": "[dot-above]{telco}[double-left-curl][double-dot-below]{}",
 
     // ----------------------------------------------------------------------------
     // CONSONANTS
